--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,49 @@
         {{ with .Site.Params.profilePic }} <img class="profile" src="{{ . }}"> {{ end }}
         <h1>{{ .Site.Title }} </h1>
         <h2>{{ markdownify .Site.Params.Description }}</h2>
+   <br>
+   <br>
+        <section>
+            <h2>O Que Fazemos</h2>
+            <p>Na <strong>RAVASYS</strong>, somos especialistas em <strong>soluções tecnológicas inovadoras</strong> para empresas que buscam se adaptar à transformação digital. Com mais de <strong>26 anos de experiência</strong>, oferecemos <strong>serviços em tecnologia</strong> que impulsionam os negócios, garantindo eficiência, segurança e crescimento contínuo.</p>
+        </section>
+        <br>
+        <br>
+        <section>
+            <h3>Soluções Personalizadas em Tecnologia</h3>
+            <p>Criamos e implementamos soluções de <strong>software</strong>, <strong>infraestrutura</strong> e <strong>segurança</strong> que atendem às necessidades específicas de cada cliente, com foco em inovação e resultados de longo prazo.</p>
+        </section>
+        <br>
+        <br>
+        <section>
+            <h3>Expertise em Sistemas Legados</h3>
+            <p>Com vasta experiência em <strong>migração de sistemas legados</strong> e integração de novas tecnologias, ajudamos empresas a modernizarem suas infraestruturas sem perder a continuidade dos negócios.</p>
+        </section>
+        <br>
+        <br>
+        <section>
+            <h3>Profissionais Altamente Capacitados</h3>
+            <p>Nossa equipe de <strong>profissionais seniores</strong> está pronta para oferecer consultoria, otimização de processos e desenvolvimento de soluções de ponta para enfrentar os desafios tecnológicos do futuro.</p>
+        </section>
+        <br>
+        <br>
+        <section >
+            <h2>Por Que Escolher a RAVASYS?</h2>
+            <ul style="list-style-type: none;">
+                <li><strong>duas décadas de experiência</strong> no setor</li>
+                <li><strong>Equipe especializada</strong> e atualizada com as últimas tendências tecnológicas</li>
+                <li><strong>Compromisso com a segurança</strong> e proteção de dados</li>
+                <li><strong>Soluções personalizadas</strong> para cada desafio</li>
+            </ul>
+        </section>
+        <br>
+        <br>
+        <section>
+            <h2>Entre em Contato</h2>
+            <p><strong>Está pronto para transformar sua empresa?</strong> Entre em contato conosco para saber como podemos ajudar a sua organização a alcançar seus objetivos com soluções tecnológicas de alto nível.</p>
+            <a href="/fale-conosco">Contate-nos agora!</a>
+        </section>
+        <br><br>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
     </div>
 </main>
