--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
         <footer>
-            <p class="copyright text-muted">© {{ .Site.LastChange.Format "2006" }} {{ .Site.Title }}. Feito com <i class="bi bi-heart-fill"></i></p> 
+            <p class="copyright text-muted">© {{ .Site.Lastmod.Format "2006" }} {{ .Site.Title }}. Feito com <i class="bi bi-heart-fill"></i></p> 
         </footer>
 
         {{ partial "body-close" . }}
