--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ html, body {
 }
 
 body {
-    padding-top: 15ex;
+    padding-top: 5em;
     display: flex;
     text-align: center;
     flex-direction: column;  
@@ -49,12 +49,6 @@ img {
     color: var(--bs-gray);
     font-size: 3em;
 }
-
-.content {
-    padding-top: 30px;
-}
-
-
 
 a:link, a:visited {
     color: var(--rs-logo-b);
@@ -123,6 +117,10 @@ footer {
     .navbar-brand {        
         border-right: 1px solid var(--rs-bar);
     }
+    body {
+        padding-top: 7em;
+        
+    }
     
 }
 @media screen and (max-width: 992px) {
@@ -130,7 +128,7 @@ footer {
         padding: 10px 0 0 10px;
 
     }
-    
+   
 }
 
 
